#28466: video mixing class implementation. Add SFLThread class.
Add also auto-start on local camera at any video capable call.
Fix VideoGenerator class.

Note: bliting function works only with YUV420 planar pixel format.

--- a/daemon/src/Makefile.am
+++ b/daemon/src/Makefile.am
@@ -86,6 +86,8 @@ libsflphone_la_SOURCES = conference.cpp \
 		fileutils.cpp \
 		scoped_lock.cpp \
 		scoped_lock.h \
+		sflthread.cpp \
+		sflthread.h \
 		conference.h \
 		voiplink.h \
 		preferences.h \
