* #29736: presence: merge sippublish into sippresence

--- a/daemon/src/sip/Makefile.am
+++ b/daemon/src/sip/Makefile.am
@@ -20,9 +20,8 @@ libsiplink_la_SOURCES = \
 		pres_sub_server.cpp\
 		pres_sub_server.h\
 		pres_sub_client.cpp\
-		pres_sub_client.h\
-		sippublish.cpp\
-		sippublish.h
+		pres_sub_client.h
+
 if BUILD_SDES
 libsiplink_la_SOURCES+= sdes_negotiator.cpp \
 			sdes_negotiator.h \
