#29579: video mixing implementation and conference fixes.
- mixer rendering implemention
=> frame based (was per sources batch based)

- add backward signaling to Observer/Obsevable classes
=> This help mixer to index sources for layout them.

- mutex'ed frame publish (VideoGenerator).

- sinks creation are now done at right places.
=> one per mixer (new), one per camera, one per stream reception.

- VideoRTPSession is fully responsible to handle video pipeline,
between RX/TS streams.
=> exhibit enterConference/exitConference to be aknowledged by upper layers.

- VideoSendThread is not longer a «thread», renamed as VideoSender.

- videoMixer_ is now a shared ptr in Conference objects.
=> getVideoMixer() return a rew shared_ptr also.

- Conference is now responsible to trig video conference pipeline

- std::this_thread::sleep_for() is not usable before GCC 4.1

--- a/daemon/src/video/Makefile.am
+++ b/daemon/src/video/Makefile.am
@@ -16,7 +16,7 @@ libvideo_la_SOURCES = \
 	shm_sink.cpp shm_sink.h \
 	video_camera.cpp video_camera.h \
 	video_receive_thread.cpp video_receive_thread.h \
-	video_send_thread.cpp video_send_thread.h \
+	video_sender.cpp video_sender.h \
 	video_rtp_session.cpp video_rtp_session.h \
 	check.h shm_header.h video_provider.h \
 	libav_utils.cpp libav_utils.h libav_deps.h
