* #30789 : Create separated window (enable/disable in ViewMenu)

--- a/gnome/src/Makefile.am
+++ b/gnome/src/Makefile.am
@@ -53,7 +53,8 @@ libsflphone_client_la_SOURCES = \
   sflphone_client.h \
   sflphone_client.c \
   sflphone_options.c \
-  sflphone_options.h
+  sflphone_options.h \
+  buddylistwindow.c
 
 libsflphone_client_la_LIBADD = @CLUTTER_LIBS@ @CLUTTERGTK_LIBS@ $(SFLPHONE_LIBS)
 libsflphone_client_la_LDFLAGS = @CLUTTER_LDFLAGS@ @DBUSGLIB_LIBS@ @LIBNOTIFY_LIBS@ \
