--- a/daemon/configure.ac
+++ b/daemon/configure.ac
@@ -157,6 +157,14 @@ PKG_CHECK_MODULES([CCRTP], [libccrtp] >= ${LIBCCRTP_MIN_VERSION},, [
                    PKG_CHECK_MODULES([CCRTP], [libccrtp1] >= ${LIBCCRTP_MIN_VERSION},, AC_MSG_ERROR([Missing ccrtp development files]))
         ])
 
+dnl Presence is a default-enabled feature
+AC_ARG_ENABLE([presence],
+              AS_HELP_STRING([--disable-presence], [Disable SIP presence support]))
+
+AS_IF([test "x$enable_presence" != "xno"], [
+    AC_DEFINE(SFL_PRESENCE, [], [Presence support enabled])
+    AM_CONDITIONAL(SFL_PRESENCE, true)],
+    AM_CONDITIONAL(SFL_PRESENCE, false))
 
 # TLS
 # required dependency(ies): libssl
