* #31910: gnome: add --disable-presence option

--- a/gnome/src/Makefile.am
+++ b/gnome/src/Makefile.am
@@ -53,8 +53,11 @@ libsflphone_client_la_SOURCES = \
   sflphone_client.h \
   sflphone_client.c \
   sflphone_options.c \
-  sflphone_options.h \
-  buddylistwindow.c
+  sflphone_options.h
+
+if SFL_PRESENCE
+libsflphone_client_la_SOURCES+=buddylistwindow.c buddylistwindow.h
+endif
 
 libsflphone_client_la_LIBADD = @CLUTTER_LIBS@ @CLUTTERGTK_LIBS@ $(SFLPHONE_LIBS)
 libsflphone_client_la_LDFLAGS = @CLUTTER_LDFLAGS@ @DBUSGLIB_LIBS@ @LIBNOTIFY_LIBS@ \
