--- a/gnome/src/dbus/Makefile.am
+++ b/gnome/src/dbus/Makefile.am
@@ -7,8 +7,13 @@ BUILT_SOURCES=                      \
     configurationmanager-glue.h     \
     instance-glue.h                 \
     marshaller.c                    \
-    marshaller.h		    \
-    presencemanager-glue.h
+    marshaller.h
+
+if SFL_PRESENCE
+BUILT_SOURCES+=presencemanager-glue.h
+presencemanager-glue.h: presencemanager-introspec.xml Makefile.am
+	dbus-binding-tool --mode=glib-client $< > $@
+endif
 
 if SFL_VIDEO
 BUILT_SOURCES+=video_controls-glue.h
