* #34334: daemon: remove duplicate presence manager code

--- a/daemon/src/client/dbus/Makefile.am
+++ b/daemon/src/client/dbus/Makefile.am
@@ -40,7 +40,7 @@ libclient_la_SOURCES = \
     client.cpp
 
 if SFL_PRESENCE
-libclient_la_SOURCES+=presencemanager.cpp
+libclient_la_SOURCES+=../presencemanager.cpp presencemanager_dbus.cpp
 endif
 
 if SFL_VIDEO
