* #34495: gnome: add missing filename to POTFILES.in

--- a/gnome/po/POTFILES.in
+++ b/gnome/po/POTFILES.in
@@ -19,6 +19,7 @@ src/contacts/searchbar.c
 src/dbus/dbus.c
 src/main.c
 src/mainwindow.c
+src/presencewindow.c
 src/sflphone_client.c
 src/sflphone_options.c
 src/sflnotify.c
