* #34680: audio: rename noisesuppress -> dsp
It can do both noise suppression and automatic gain control.

--- a/daemon/src/audio/Makefile.am
+++ b/daemon/src/audio/Makefile.am
@@ -13,8 +13,8 @@ SUBDIRS += pulseaudio
 endif
 
 if BUILD_SPEEXDSP
-SFL_SPEEXDSP_SRC=noisesuppress.cpp
-SFL_SPEEXDSP_HEAD=noisesuppress.h
+SFL_SPEEXDSP_SRC=dsp.cpp
+SFL_SPEEXDSP_HEAD=dsp.h
 endif
 
 libaudio_la_SOURCES = \
