* #35013: gnome: remove extension from filename
Makes desktop-file-validate pass.

--- a/gnome/sflphone.desktop.in
+++ b/gnome/sflphone.desktop.in
@@ -4,7 +4,7 @@ GenericName=VoIP Client
 X-GNOME-FullName=SFLphone VoIP Client
 Comment=Call and receive calls with SIP or IAX protocols
 Exec=sflphone-client-gnome
-Icon=sflphone.svg
+Icon=sflphone
 StartupNotify=true
 Terminal=false
 Type=Application
