* #36297: daemon: remove mention of defunct STUN server

--- a/daemon/test/sflphoned-sample.yml
+++ b/daemon/test/sflphoned-sample.yml
@@ -28,7 +28,7 @@ accounts:
     keyExchange:
     rtpFallback: false
   stunEnabled: false
-  stunServer: stun.sflphone.org
+  stunServer:
   tls:
     calist:
     certificate:
@@ -96,7 +96,7 @@ accounts:
     keyExchange: sdes
     rtpFallback: false
   stunEnabled: false
-  stunServer: stun.sflphone.org
+  stunServer:
   tls:
     calist:
     certificate:
