* #37134: launchpad: push packages for ubuntu 14.04 (Trusty Tahr)

--- a/tools/build-system/launchpad/dput.conf
+++ b/tools/build-system/launchpad/dput.conf
@@ -40,6 +40,13 @@ incoming = ~savoirfairelinux/ubuntu/saucy
 login = anonymous
 allow_unsigned_uploads = 0
 
+[sflphone-trusty]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/ubuntu/trusty
+login = anonymous
+allow_unsigned_uploads = 0
+
 [sflphone-nightly-natty]
 fqdn = ppa.launchpad.net
 method = ftp
@@ -72,6 +79,13 @@ allow_unsigned_uploads = 0
 fqdn = ppa.launchpad.net
 method = ftp
 incoming = ~savoirfairelinux/sflphone-nightly/ubuntu/saucy
+login = anonymous
+allow_unsigned_uploads = 0
+
+[sflphone-nightly-trusty]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/sflphone-nightly/ubuntu/trusty
 login = anonymous
 allow_unsigned_uploads = 0
 
