misc: add replay_conversation
Change-Id: I82582c5658a71145a37e2fbe373d32252aaee087

--- a/test/unitTest/Makefile.am
+++ b/test/unitTest/Makefile.am
@@ -145,6 +145,8 @@ ut_conversationRepository_SOURCES = conversationRepository/conversationRepositor
 #
 check_PROGRAMS += ut_conversation
 ut_conversation_SOURCES = conversation/conversation.cpp
+check_PROGRAMS += ut_conversationReplay
+ut_conversationReplay_SOURCES = conversation/replay_conversation.cpp
 
 #
 # syncHistory
