contrib/ffmpeg: add FEC enable to patch list
Add the patches that enable FEC in libopus codec in ffmpeg package.json
This ensures that the patches are properly applied, especially in the
Windows builds.

Issue: #5157
Change-Id: I438de63528894d3c7ded553f1982d664bda26e31

--- a/contrib/src/ffmpeg/package.json
+++ b/contrib/src/ffmpeg/package.json
@@ -11,7 +11,9 @@
     ],
     "patches": [
         "change-RTCP-ratio.patch",
-        "rtp_ext_abs_send_time.patch"
+        "rtp_ext_abs_send_time.patch",
+        "libopusenc-enable-FEC.patch",
+        "libopusdec-enable-FEC.patch"
     ],
     "win_patches": [
         "windows-configure.patch",
