--- a/src/plugin/CMakeLists.txt
+++ b/src/plugin/CMakeLists.txt
@@ -5,14 +5,18 @@ list (APPEND Source_Files__plugin
       "${CMAKE_CURRENT_SOURCE_DIR}/jamipluginmanager.cpp"
       "${CMAKE_CURRENT_SOURCE_DIR}/pluginloaderdl.cpp"
       "${CMAKE_CURRENT_SOURCE_DIR}/pluginmanager.cpp"
+      "${CMAKE_CURRENT_SOURCE_DIR}/pluginpreferencesutils.cpp"
       "${CMAKE_CURRENT_SOURCE_DIR}/callservicesmanager.h"
-      "${CMAKE_CURRENT_SOURCE_DIR}/conversationservicesmanager.h"
-      "${CMAKE_CURRENT_SOURCE_DIR}/conversationhandler.h"
+      "${CMAKE_CURRENT_SOURCE_DIR}/callservicesmanager.cpp"
+      "${CMAKE_CURRENT_SOURCE_DIR}/chatservicesmanager.h"
+      "${CMAKE_CURRENT_SOURCE_DIR}/chatservicesmanager.cpp"
+      "${CMAKE_CURRENT_SOURCE_DIR}/chathandler.h"
       "${CMAKE_CURRENT_SOURCE_DIR}/jamiplugin.h"
       "${CMAKE_CURRENT_SOURCE_DIR}/jamipluginmanager.h"
       "${CMAKE_CURRENT_SOURCE_DIR}/mediahandler.h"
       "${CMAKE_CURRENT_SOURCE_DIR}/pluginloader.h"
       "${CMAKE_CURRENT_SOURCE_DIR}/pluginmanager.h"
+      "${CMAKE_CURRENT_SOURCE_DIR}/pluginpreferencesutils.h"
       "${CMAKE_CURRENT_SOURCE_DIR}/streamdata.h"
 )
 
